use Seafile link on Apps button. Wrap all apps in fontawesome icon for V3 and nav icon for V2. Hide touchmode in V2, too, now that we have toolbox. Override pink code section on docs page. Tune V2 Home Apps buttons. Fix a bug in viewuser for anonymous users.
git-svn-id: svn+ssh://svn.code.sf.net/p/migrid/code/trunk@4418 b75ad72c-e7d7-11dd-a971-7dbc132099af

--- a/mig/assets/css/V3/style.css
+++ b/mig/assets/css/V3/style.css
@@ -708,3 +708,9 @@ z-index: 2;
 .is-active {
     display: block;
 }
+
+/* Docs */
+code {
+    color: silver;
+}
+
