--- a/mig/images/skin/erda-ucph-science/ui-v2.custom.css
+++ b/mig/images/skin/erda-ucph-science/ui-v2.custom.css
@@ -29,6 +29,12 @@
 
 /* ERDA UCPH Science skin style sheet for UI V2 only */
 
+/* Hide touchscreen toggle now we have toolbox button on all entries */
+#fm_toggle_touchscreen, #fm_touchscreen_label {
+    display: none;
+}
+
+
 /* Home with app grid */
 .app-grid {
     display: grid;
@@ -37,12 +43,12 @@
 }
 /* Expand add-app boxes without link and make room for checkbox */
 .app-grid .app__btn.mandatory {
-    padding-top: 45px;
-    padding-bottom: 50px;
+    padding-top: 35px;
+    padding-bottom: 40px;
 }
 .app-grid .app__btn.optional {
     padding-top: 23px;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
 }
 .app-grid > *, .app-grid > * a  {
     color: #46743C;
@@ -71,7 +77,6 @@
     padding-top: 50px;
 }
 .app-grid h3 {
-    display: inline-block;
     border: 0;
     vertical-align: middle;
 }
